# Project

./: .gitignore  DRACO对比方案计划.md  任务分解清单.md  前端重构架构方案.md  存储管理开发计划.md  数据库与数据模型确定版.md  模型展示页开发任务.md
3D platform/: viewer.html
3D platform/STL/: FANG FANG_Smoothed_Pink 16_001.stl  FANG FANG_Smoothed_Purple 16_001.stl  FANG FANG_Smoothed_Red 16_001.stl  FANG FANG_Smoothed_Turquiose 16_001.stl  FANG FANG_Smoothed_骶骨 16_001.stl
3D platform/static/js/: colpick-one.js
Medical Data Manager Software/: api.md
Medical Data Manager Software/3D platform/: hm.js
Medical Data Manager Software/3D platform/STL/: FANG FANG_11111111_001.stl  FANG FANG_Smoothed_Fuchsia 16_001.stl  FANG FANG_Smoothed_Green 16_001.stl  FANG FANG_Smoothed_Green2 16_001.stl  FANG FANG_Smoothed_GreenYellow 16_001.stl  FANG FANG_Smoothed_Peach 16_001.stl  (+4 more)
Medical Data Manager Software/medical-web/: package-lock.json  vite.config.ts  性能优化方案.md
Medical Data Manager Software/ui-preview/: dashboard.html  hospitals.html  index.html  record-edit.html  record-new.html
medical-server/: Cargo.toml
medical-server/migrations/2026-02-26-053558-0000_create_tables/: up.sql
medical-server/migrations/2026-02-27-000000_add_short_code/: down.sql  up.sql
medical-server/migrations/2026-03-02-100000_remove_drc_records/: down.sql  up.sql
medical-server/src/: db.rs
medical-server/src/routes/: mod.rs
medical-server/src/services/: file_service.rs  mod.rs
medical-server/static/: index.html
medical-web/: index.html  package.json
medical-web/src/: App.vue
ui-preview/: nav.js  record-detail.html  shared.css
(+57 files in other folders)
