[package]
name = "medical-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
actix-files = "0.6"
actix-multipart = { version = "0.7", features = ["derive"] }
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
tera = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
rust-s3 = "0.34"
